--- a/LoopCommandSharp/Views/MintNftWindow.axaml
+++ b/LoopCommandSharp/Views/MintNftWindow.axaml
@@ -3,6 +3,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+		Width="1000" Height="500"
+		CanResize="False"
         x:Class="LoopCommandSharp.Views.MintNftWindow"
 		xmlns:vm="using:LoopCommandSharp.ViewModels"
         Title="Mint Nft">
@@ -10,4 +12,19 @@
 	<Design.DataContext>
 		<vm:MintNftWindowViewModel/>
 	</Design.DataContext>
+	
+	<StackPanel ScrollViewer.VerticalScrollBarVisibility="Auto">
+		<Button Width="100" HorizontalAlignment="Left" Command="{Binding MintNft}">Mint</Button>
+		<Grid ShowGridLines="True">
+			<Grid.RowDefinitions>
+				<RowDefinition Height="Auto"></RowDefinition>
+			</Grid.RowDefinitions>
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="Auto"></ColumnDefinition>
+				<ColumnDefinition Width="Auto"></ColumnDefinition>
+			</Grid.ColumnDefinitions>
+			<TextBox Grid.Row="0" Grid.Column="0" AcceptsReturn="True" TextWrapping="Wrap" ScrollViewer.VerticalScrollBarVisibility="Auto" IsReadOnly="{Binding IsMinting}" Watermark="Enter IPFS JSON CIDS here per line..." Text="{Binding Cids}" Width="450"/>
+			<TextBlock  Grid.Row="0" Grid.Column="1" Text="{Binding Log}" ScrollViewer.VerticalScrollBarVisibility="Auto" Width="500"/>
+		</Grid>
+	</StackPanel>
 </Window>
