--- a/LoopCommandSharp/Views/MintNftWindow.axaml
+++ b/LoopCommandSharp/Views/MintNftWindow.axaml
@@ -14,8 +14,8 @@
 	</Design.DataContext>
 	
 	<StackPanel ScrollViewer.VerticalScrollBarVisibility="Auto">
-		<Button Width="100" Command="{Binding MintNft}">Mint</Button>
-		<ComboBox Name="MyComboBox" SelectedIndex="0" Items="{Binding Collections}"/>
+		<Button Width="100" Command="{Binding MintNft}" IsEnabled="{Binding IsEnabled}">Mint</Button>
+		<ComboBox Name="MyComboBox" SelectedIndex="0" Items="{Binding Collections}" IsEnabled="{Binding IsEnabled}"/>
 
 		<Grid ShowGridLines="True">
 			<Grid.RowDefinitions>
@@ -26,7 +26,7 @@
 				<ColumnDefinition Width="Auto"></ColumnDefinition>
 			</Grid.ColumnDefinitions>
 			<TextBox Grid.Row="0" Grid.Column="0" AcceptsReturn="True" ScrollViewer.VerticalScrollBarVisibility="Auto" IsReadOnly="{Binding IsMinting}" Watermark="Enter IPFS JSON CIDS here per line..." Text="{Binding Cids}" Width="450"/>
-			<TextBlock  Grid.Row="0" Grid.Column="1" Text="{Binding Log}" ScrollViewer.VerticalScrollBarVisibility="Auto" Width="500"/>
+			<TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Log}" ScrollViewer.VerticalScrollBarVisibility="Auto" Width="500"/>
 		</Grid>
 	</StackPanel>
 </Window>
