--- a/LoopCommandSharp/Views/MintFeeWindow.axaml
+++ b/LoopCommandSharp/Views/MintFeeWindow.axaml
@@ -4,6 +4,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
 		Width="400" Height="100"
+		CanResize="False"
         x:Class="LoopCommandSharp.Views.MintFeeWindow"
         Title="MintFeeWindow">
 	<StackPanel>
