--- a/LoopCommandSharp/Views/MainWindow.axaml
+++ b/LoopCommandSharp/Views/MainWindow.axaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="200" d:DesignHeight="100"
-		Width="300" Height="100"
+		Width="300" Height="150"
         CanResize="False"
         x:Class="LoopCommandSharp.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
@@ -16,7 +16,8 @@
 
 	<StackPanel>
         <Button Name="CreateCollection" Width="200" HorizontalAlignment="Center" Click="ShowCreateNftCollectionWindow">Create NFT Collection</Button>
-        <Button Name="Mint" Width="200" HorizontalAlignment="Center" Click="ShowMintNftWindow">Mint NFT</Button>
+        <Button Name="Mint" Width="200" HorizontalAlignment="Center" Click="ShowMintNftWindow">Mint NFTs</Button>
+		<Button Name="AirdropNFT" Width="200" HorizontalAlignment="Center" Click="ShowAirdropNftWindow">Airdrop NFTs</Button>
         <Button Width="200" HorizontalAlignment="Center" Click="ShowSettingsWindow">Settings</Button>
     </StackPanel>
 
